--- a/index.html
+++ b/index.html
@@ -82,15 +82,14 @@
         </p>
         <p>
           I believe that having an opportunity to work within your reputable
-          organization will give me an enabling platform to make a significant
-          impact in Raisely while bootstrapping my career professionally. I am a
+          organization will give me an enabling platform to contribute significantly
+          while bootstrapping my career professionally. I am a
           positive, focused, self-motivated, team player and result-oriented
           individual constantly seeking ways to proffer solutions to real world
           problems. I am committed to life-long learning and strongly believe
           that my personality, education and experience have prepared me to take
           on challenges that a work environment like yours can present. I will
-          treasure the privilege to come on-board Raisely to partake in the
-          creation of technological infrastructures for charities.
+          treasure the privilege to come on-board.
         </p>
       </div>
     </div>
