Update on completed personal projects

--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
         </p>
         <p>
           I believe that having an opportunity to work within your reputable
-          organization will give me an enabling platform to contribute significantly
-          while bootstrapping my career professionally. I am a
+          organization will give me an enabling platform to make a significant
+          impact in Raisely while bootstrapping my career professionally. I am a
           positive, focused, self-motivated, team player and result-oriented
           individual constantly seeking ways to proffer solutions to real world
           problems. I am committed to life-long learning and strongly believe
           that my personality, education and experience have prepared me to take
           on challenges that a work environment like yours can present. I will
-          treasure the privilege to come on-board.
+          treasure the privilege to come on-board Raisely to partake in the
+          creation of technological infrastructures for charities.
         </p>
       </div>
     </div>
@@ -117,6 +118,23 @@
             </div>
           </div>
           <div class="card">
+            <img src="./images/tenrify.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Project 3</h5>
+              <p class="card-text">
+                Tenrify Simplifies Tenancy Verification! Tenrify bridges the gap
+                between the verification of a potential tenant and a landlord.
+                Through this site, landlords discover their dream tenants.
+              </p>
+              <p class="card-text">
+                <a href="http://tenrify.com/" target="_blank">
+                  <button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
+          <div class="card">
             <img src="./images/bco.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Blog</h5>
@@ -134,18 +152,20 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+      <div id="second-card" class="container">
+        <div class="card-deck">
           <div class="card">
-            <img src="./images/tenrify.png" class="card-img-top" alt="..." />
+            <img src="./images/animation.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Project 3</h5>
+              <h5 class="card-title">3D Animation</h5>
               <p class="card-text">
-                Tenrify Simplifies Tenancy Verification! Tenrify bridges the gap
-                between the verification of a potential tenant and a landlord.
-                Through this site, landlords discover their dream tenants.
+                A mini project built to showcase the 3D animation effect.
               </p>
               <p class="card-text">
-                <a href="http://tenrify.com/" target="_blank">
-                  <button type="button" class="btn btn-secondary btn-lg">
+                <a href="https://blessingokpala.github.io/animation/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
                     Learn more
                   </button></a
                 >
