Update index.html and images

--- a/index.html
+++ b/index.html
@@ -167,8 +167,22 @@
                 <a href="https://blessingokpala.github.io/animation/" target="_blank"
                   ><button type="button" class="btn btn-secondary btn-lg">
                     Learn more
-                  </button></a
-                >
+                  </button></a>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/sneakers.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Sneakers</h5>
+              <p class="card-text">
+                A showcase of various types of sneakers shoes.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.github.io/sneakers/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
               </p>
             </div>
           </div>
