Update index.html and images

--- a/index.html
+++ b/index.html
@@ -186,6 +186,21 @@
               </p>
             </div>
           </div>
+          <div class="card">
+            <img src="./images/weatherapp.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Weather App</h5>
+              <p class="card-text">
+                A weather app that shows the current weather condition of a city.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.github.io/weatherapp/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
