Update the index.html, CSS and image files

--- a/index.html
+++ b/index.html
@@ -83,15 +83,20 @@
         <p>
           I believe that having an opportunity to work within your reputable
           organization will give me an enabling platform to make a significant
-          impact in Raisely while bootstrapping my career professionally. I am a
+          impact while bootstrapping my career professionally. I am a
           positive, focused, self-motivated, team player and result-oriented
           individual constantly seeking ways to proffer solutions to real world
           problems. I am committed to life-long learning and strongly believe
           that my personality, education and experience have prepared me to take
           on challenges that a work environment like yours can present. I will
-          treasure the privilege to come on-board Raisely to partake in the
-          creation of technological infrastructures for charities.
+          treasure the privilege to come on-board and partake in the
+          creation of technological infrastructures that add value to your company. 
         </p>
+          <p>
+            <a href="https://github.com/blessingokpala/" target="_blank">
+              <img class="github" src="./images/github.png" alt="github">
+            </a>
+          </p>
       </div>
     </div>
     <!-- N:B To target only the h2, let it be outside the div of class container for the card-deck-->
