Update the index.html, css and image

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </p>
           <p>
             <a href="https://github.com/blessingokpala/" target="_blank">
-              <img class="github" src="./images/github.png" alt="github">
+              <img class="github" src="./images/github.jpg" alt="github">
             </a>
           </p>
       </div>
