--- a/index.html
+++ b/index.html
@@ -208,6 +208,25 @@
           </div>
         </div>
       </div>
+      <div id="third-card" class="container">
+        <div class="card-deck">
+          <div class="card">
+            <img src="./images/globe.png" class="card-img-top" alt="globe" />
+            <div class="card-body">
+              <h5 class="card-title">The Globe</h5>
+              <p class="card-text">
+                A project to showcase a playing video on the hero section of a landing page as well as vertical text.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.github.io/globe/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <footer>
       <nav class="navbar sticky-bottom navbar-light bg-secondary">
