--- a/index.html
+++ b/index.html
@@ -225,6 +225,21 @@
               </p>
             </div>
           </div>
+          <div class="card">
+            <img src="./images/polygon.png" class="card-img-top" alt="polygon" />
+            <div class="card-body">
+              <h5 class="card-title">Polygon Hero Image</h5>
+              <p class="card-text">
+                This project shows the polygon style of building the header using HTML and CSS.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.github.io/polygon-header/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
