--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="card-body">
               <h5 class="card-title">Polygon Hero Image</h5>
               <p class="card-text">
-                This project shows the polygon style of building the header using HTML and CSS.
+                This project shows the polygon style of building a header using HTML and CSS.
               </p>
               <p class="card-text">
                 <a href="https://blessingokpala.github.io/polygon-header/" target="_blank"
