Updating html, css files

--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
         <p>
           Digital skills are exceedingly valuable, especially in our present
           working world. I consider it very important to move along with the
-          trend. Being so passionate about technology, I am looking to
-          transition into a job in the IT sector. I am determined to advance my
+          trend. Being so passionate about technology, I decided to
+          transition into the IT sector. I am determined to advance my
           digital career as well as expand my technical expertise. In
-          particular, I am interested in web development and over the past one
+          particular, I am interested in web development and over the past
           year, I began learning about HTML, CSS, Bootstrap, JavaScript and
           React.js. I am proficient in HTML, CSS and Bootstrap with a decent
           knowledge of JavaScript and React.js.
         </p>
         <p>
           I have worked on the frontend of a couple of commercial projects
-          namely: globalfoodbook.com and blessingdirect.net
+          namely: globalfoodbook.com and scribeslab
         </p>
         <p>
           I have designed lead generation landing pages, marketing campaign
@@ -81,10 +81,7 @@
           editing.
         </p>
         <p>
-          I believe that having an opportunity to work within your reputable
-          organization will give me an enabling platform to make a significant
-          impact while bootstrapping my career professionally. I am a
-          positive, focused, self-motivated, team player and result-oriented
+          I am a positive, focused, self-motivated, team player and result-oriented
           individual constantly seeking ways to proffer solutions to real world
           problems. I am committed to life-long learning and strongly believe
           that my personality, education and experience have prepared me to take
@@ -123,9 +120,25 @@
             </div>
           </div>
           <div class="card">
+            <img src="./images/scribeslab.jpg" class="card-img-top" alt="Scribes Lab" />
+            <div class="card-body">
+              <h5 class="card-title">Scribes Lab</h5>
+              <p class="card-text">
+                Scribes Lab is a web development agency that specializes on designing, developing and delivering software products. It is an independently owned digital agency that derives joy in helping solve clients' digital problems. Scribes Lab proffer solutions that transform business needs.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.github.io/scribeslab/" target="_blank">
+                  <button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
             <img src="./images/tenrify.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Project 3</h5>
+              <h5 class="card-title">Tenrify</h5>
               <p class="card-text">
                 Tenrify Simplifies Tenancy Verification! Tenrify bridges the gap
                 between the verification of a potential tenant and a landlord.
@@ -136,24 +149,6 @@
                   <button type="button" class="btn btn-secondary btn-lg">
                     Learn more
                   </button></a>
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <img src="./images/bco.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Blog</h5>
-              <p class="card-text">
-                A personal blog where Blessing shared her views whilst
-                conducting her doctoral research projects. Blessing believes in
-                contributing something new to the entire body of knowledge.
-              </p>
-              <p class="card-text">
-                <a href="https://blessingokpala.com/" target="_blank"
-                  ><button type="button" class="btn btn-secondary btn-lg">
-                    Learn more
-                  </button></a
-                >
               </p>
             </div>
           </div>
@@ -211,6 +206,24 @@
       <div id="third-card" class="container">
         <div class="card-deck">
           <div class="card">
+            <img src="./images/bco.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Blog</h5>
+              <p class="card-text">
+                A personal blog where Blessing shared her views whilst
+                conducting her doctoral research projects. Blessing believes in
+                contributing something new to the entire body of knowledge.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.com/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a
+                >
+              </p>
+            </div>
+          </div>
+          <div class="card">
             <img src="./images/globe.png" class="card-img-top" alt="globe" />
             <div class="card-body">
               <h5 class="card-title">The Globe</h5>
@@ -244,13 +257,13 @@
       </div>
     </div>
     <footer>
-      <nav class="navbar sticky-bottom navbar-light bg-secondary">
-        <a id="footer" class="navbar-brand" href="#"
-          >&copy 2020 All rights reserved</a
-        >
-      </nav>
+      <nav id="footer" class="navbar sticky-bottom">
+        <ul>
+          <li><a class="navbar-brand" href="#">&copy; <script>document.write(new Date().getFullYear())</script> All rights reserved.</a></li>
+        </ul>
+        </nav>
     </footer>
-    <!-- JS, Popper.js, and jQuery -->
+    <!-- JS Popper.js, and jQuery -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
