Updating the html and images

--- a/index.html
+++ b/index.html
@@ -120,7 +120,22 @@
             </div>
           </div>
           <div class="card">
-            <img src="./images/tenrify.png" class="card-img-top" alt="..." />
+            <img src="./images/aleph.png" class="card-img-top" alt="aleph" />
+            <div class="card-body">
+              <h5 class="card-title">Aleph</h5>
+              <p class="card-text">
+                Aleph is a software development company that specializes on designing, developing and delivering software products. The company is an independently owned digital agency that derives joy in helping solve clients' digital problems. They proffer solutions that transform business needs.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.github.io/aleph/" target="_blank">
+                  <button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/tenrify.png" class="card-img-top" alt="tenrify" />
             <div class="card-body">
               <h5 class="card-title">Tenrify</h5>
               <p class="card-text">
