--- a/index.html
+++ b/index.html
@@ -254,6 +254,26 @@
           </div>
         </div>
       </div>
+      <div id="fourt-card" class="container">
+        <div class="card-deck">
+          <div class="card">
+            <img src="./images/flex.png" class="card-img-top" alt="flex" />
+            <div class="card-body">
+              <h5 class="card-title">Flex</h5>
+              <p class="card-text">
+                This repository showcases how one can easily use css flex property for equal and responsive partitioning.
+              </p>
+              <p class="card-text">
+                <a href="https://blessingokpala.github.io/flexbox/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <footer>
       <nav id="footer" class="navbar sticky-bottom">
