--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="card-body">
               <h5 class="card-title">Flex</h5>
               <p class="card-text">
-                This repository showcases how one can easily use css flex property for equal and responsive partitioning.
+                This repository showcases how one can easily use css flex property for equal partitioning.
               </p>
               <p class="card-text">
                 <a href="https://blessingokpala.github.io/flexbox/" target="_blank"
