updating html, css

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </div>
         </div>
       </div>
-      <div id="fourt-card" class="container">
+      <div id="fourth-card" class="container">
         <div class="card-deck">
           <div class="card">
             <img src="./images/flex.png" class="card-img-top" alt="flex" />
