Updated the html pages and images

--- a/index.html
+++ b/index.html
@@ -51,43 +51,15 @@
       <a href="#about"><h2>ABOUT ME</h2></a>
       <div class="container">
         <p>
-          My name is Blessing, I hold a PhD in Business and Management with a
-          master’s in business administration. However, the world we live in is
-          already digitized and is constantly transforming. With the advancement
-          of technologies and the ever-changing consumers' demands, it is
-          pertinent for me to keep abreast of what is happening.
-        </p>
-        <p>
-          Digital skills are exceedingly valuable, especially in our present
-          working world. I consider it very important to move along with the
-          trend. Being so passionate about technology, I decided to
-          transition into the IT sector. I am determined to advance my
-          digital career as well as expand my technical expertise. In
-          particular, I am interested in web development and over the past
-          year, I began learning about HTML, CSS, Bootstrap, JavaScript and
-          React.js. I am proficient in HTML, CSS and Bootstrap with a decent
-          knowledge of JavaScript and React.js.
-        </p>
-        <p>
-          I have worked on the frontend of a couple of commercial projects
-          namely: globalfoodbook.com and scribeslab
+          My name is Blessing and I am happy to meet you. I am a technology enthusiast with over one year of experience in software development.
+          My interest is in Frontend development. My technical skills include: HTML, CSS Bootstrap, JavaScript, React Js, Gatsby. I have worked on the frontend of a couple of commercial projects namely: globalfoodbook.com and scribeslab
         </p>
         <p>
           I have designed lead generation landing pages, marketing campaign
-          pages, social media, newsletter pages with Mailchimp. I have designed
-          logos using Figma, Canva. I have also done wireframe, design &
-          prototype using Figma. Other digital skills I have include content
-          creation, Final cut Pro editing, Lightroom, WordPress blog update and
-          editing.
+          pages, social media, newsletter pages with Mailchimp. I have designed logos using Figma, Canva. I have also done wireframe, design & prototype using Figma. Other digital skills I have include content creation, Final cut Pro editing, Lightroom, WordPress blog update and editing.
         </p>
         <p>
-          I am a positive, focused, self-motivated, team player and result-oriented
-          individual constantly seeking ways to proffer solutions to real world
-          problems. I am committed to life-long learning and strongly believe
-          that my personality, education and experience have prepared me to take
-          on challenges that a work environment like yours can present. I will
-          treasure the privilege to come on-board and partake in the
-          creation of technological infrastructures that add value to your company. 
+          I am a positive, focused, self-motivated, team player and result-oriented individual constantly seeking ways to proffer solutions to real world problems. I am committed to life-long learning and strongly believe that my personality, education and experience have prepared me to solve technical problems. 
         </p>
           <p>
             <a href="https://github.com/blessingokpala/" target="_blank">
@@ -101,17 +73,16 @@
       <a href="#projects"><h2>PROJECTS</h2></a>
       <div class="container">
         <div class="card-deck">
+
           <div class="card">
-            <img src="./images/gfb.png" class="card-img-top" alt="..." />
+            <img src="./images/arise.png" class="card-img-top" alt="arise" />
             <div class="card-body">
-              <h5 class="card-title">Global Food Book</h5>
+              <h5 class="card-title">Arise</h5>
               <p class="card-text">
-                Global Food Book is a food recipes website curated to share and
-                grow knowledge about everything food from around the world. Food
-                is universal and connects the whole world.
+                Arise was built using the following technologies: React.Js, Material-UI, Bootstrap. 
               </p>
               <p class="card-text">
-                <a href="https://globalfoodbook.com/" target="_blank"
+                <a href="http://localhost:3000/" target="_blank"
                   ><button type="button" class="btn btn-secondary btn-lg">
                     Learn more
                   </button></a
@@ -119,6 +90,7 @@
               </p>
             </div>
           </div>
+
           <div class="card">
             <img src="./images/aleph.png" class="card-img-top" alt="aleph" />
             <div class="card-body">
@@ -256,6 +228,24 @@
       </div>
       <div id="fourth-card" class="container">
         <div class="card-deck">
+          <div class="card">
+            <img src="./images/gfb.png" class="card-img-top" alt="gfb" />
+            <div class="card-body">
+              <h5 class="card-title">Global Food Book</h5>
+              <p class="card-text">
+                Global Food Book is a food recipes website curated to share and
+                grow knowledge about everything food from around the world. Food
+                is universal and connects the whole world.
+              </p>
+              <p class="card-text">
+                <a href="https://globalfoodbook.com/" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a
+                >
+              </p>
+            </div>
+          </div>
           <div class="card">
             <img src="./images/flex.png" class="card-img-top" alt="flex" />
             <div class="card-body">
