Updated the html file

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 Arise was built using the following technologies: React.Js, Material-UI, Bootstrap. 
               </p>
               <p class="card-text">
-                <a href="http://localhost:3000/" target="_blank"
+                <a href="https://blessingokpala.github.io/arise-project/" target="_blank"
                   ><button type="button" class="btn btn-secondary btn-lg">
                     Learn more
                   </button></a
