Updating html file

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           My interest is in Frontend development. My technical skills include: HTML, CSS Bootstrap, JavaScript, React Js, Gatsby. I have worked on the frontend of a couple of commercial projects namely: globalfoodbook.com and scribeslab
         </p>
         <p>
+          The Version Control Software VCS or SCM (Source Code Management) I use mainly are Git and Github. I deploy to Netlify and Github.
+        </p>
+        <p>
           I have designed lead generation landing pages, marketing campaign
           pages, social media, newsletter pages with Mailchimp. I have designed logos using Figma, Canva. I have also done wireframe, design & prototype using Figma. Other digital skills I have include content creation, Final cut Pro editing, Lightroom, WordPress blog update and editing.
         </p>
