Updating HTML file

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
       <a href="#about"><h2>ABOUT ME</h2></a>
       <div class="container">
         <p>
-          My name is Blessing and I am happy to meet you. I am a technology enthusiast with over one year of experience in software development.
-          My interest is in Frontend development. My technical skills include: HTML, CSS Bootstrap, JavaScript, React Js, Gatsby. I have worked on the frontend of a couple of commercial projects namely: globalfoodbook.com and scribeslab
+          My name is Blessing and I am happy to meet you. I am a technology enthusiast with experience as a User Interface designer and software developer.
+          My interest is in UI/UX design and Frontend development. My technical skills/tools include: HTML, CSS Bootstrap, JavaScript, Adobe XD, Figma, Wireframe.CC, InVision, Affinity Designer, Final Cut Pro, Visual Studio, Atom, Sublime. 
         </p>
         <p>
-          The Version Control Software VCS or SCM (Source Code Management) I use mainly are Git and Github. I deploy to Netlify and Github.
+          The Version Control Software VCS or SCM (Source Code Management) in use are Git and Github. I deploy to Netlify and Github.
         </p>
         <p>
           I have designed lead generation landing pages, marketing campaign
