--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
       </div>
       
       <div class="container">
-        <a href="#projects"><h2>FRONT-END DEVELOPMENT PROJECTS</h2><a></a>
+        <a href="#projects"><h2>FRONT-END DEVELOPMENT PROJECTS</h2></a>
         <div class="card-deck">
           <div class="card">
-            <img src="./images/arise_cover.png" alt="Arise">
+            <img src="./images/arise_cover.png" style="width: 100%;" alt="Arise">
             <div class="card-body">
               <h5 class="card-title">Arise</h5>
               <p class="card-text">
@@ -174,8 +174,7 @@
                 <a href="https://ariseproject.netlify.app/" target="_blank"
                   ><button type="button" class="btn btn-secondary btn-lg">
                     Learn more
-                  </button></a
-                >
+                  </button></a>
               </p>
             </div>
           </div>
