Updating index html

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
           </div>
 
           <div class="card">
-            <img src="./images/aleph_cover.png" class="card-img-top" alt="Aleph" />
+            <img src="./images/findi.png" class="card-img-top" alt="FindI" />
             <div class="card-body">
-              <h5 class="card-title">Aleph</h5>
+              <h5 class="card-title">FindI</h5>
               <p class="card-text">
-                Aleph is a software development company that specializes on designing, developing and delivering software products. Aleph builds custom, state-of-the-art and scalable platforms that empower businesses to solve real world problems. We pride ourselves in creating new things while making existing things perform better. This project was designed using Figma.
+                FindI is a business repository website designed to allow small businesses to register their business details for easy discoverability by customers. On FindI, small business owners can list their businesses while users can search, find and reach out to them. The website is useful, user-friendly, showcases a variety of small businesses and offers a smooth browsing experience for users. This project was designed using Figma.
               </p>
               <p class="card-text">
-                <a href="https://www.behance.net/gallery/126780863/Alep-Website-Design">
+                <a href="https://www.behance.net/gallery/135135745/FINDI-WEBSITE-DESIGN-A-UX-CASE-STUDY" target="_blank">
                   <button type="button" class="btn btn-secondary btn-lg">
                     Learn more
                   </button></a>
@@ -153,7 +153,7 @@
         <div id="#projectbuttons" class="container">
           <a href="https://www.behance.net/blessingokpala" target="_blank">
             <button type="button" class="btn btn-dark btn-lg" style="background-color: #0057FF;">
-              Behance Projects
+              View More Projects
             </button></a>
             <a href="https://dribbble.com/blessingc" target="_blank">
               <button type="button" class="btn btn-dark btn-lg" style="background-color: #EA4C89;">
