--- a/index.html
+++ b/index.html
@@ -101,32 +101,14 @@
         <div class="card-deck">
 
           <div class="card">
-            <img src="./images/Goodwill-bakery.png" class="card-img-top" alt="Goodwill Bakery App Case Study" />
+            <img src="./images/elearncpr-cover.png" class="card-img-top" alt="E-LearnCPR"/>
             <div class="card-body">
-              <h4 class="card-title"> Goodwill Bakery App Case Study </h4>
+              <h5 class="card-title">E-LearnCPR Case Study</h5>
               <p class="card-text">
-                This UX case study showcases the processes involved in designing the Goodwill Bakery food delivery mobile application.
-                The Goodwill Bakery App is a mobile application designed to allow customers to order baked goods online with the option of having their orders customized and delivered as well. This mobile application is easy to use, offers a smooth online shopping experience for users and showcases a variety of different baked goods.
+                This UX case study showcases the steps involved in designing the E-LearnCPR, which is a cross-platform utility to help people learn how to give CPR. In this case study, I focused on the user flow from when the user signs into the e-learning platform until the user completes the lesson. I first empathized with the users by first conducting research via surveys and interviews. The findings and insights aid the design of this platform so that users can easily join and complete their courses.  
               </p>
               <p class="card-text">
-                <a href="https://www.behance.net/gallery/134795383/Goodwill-Bakery-Mobile-App" target="_blank"
-                  ><button type="button" class="btn btn-secondary btn-lg">
-                    Learn more
-                  </button></a
-                >
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <img src="./images/homenify_cover.png" class="card-img-top" alt="homenify" />
-            <div class="card-body">
-              <h5 class="card-title">Homenify Real Estate Website</h5>
-              <p class="card-text">
-                Homenify is a real estate website designed for a luxury brand that specializes only in high-end homes in the Halifax Regional Municipality (HRM). The company’s understanding of websites is very basic, but they want the website to be interactive and informative for their clients. They also want their website to look different than their competitors but at the same time, keep up with industry standards. Homenify was designed using Figma. 
-              </p>
-              <p class="card-text">
-                <a href="https://www.behance.net/gallery/128221949/Homenify-Luxury-Real-Estate" target="_blank">
+                <a href="https://www.behance.net/gallery/137912321/E-LearnCPR-Mobile-and-Website-Design-Case-Study" target="_blank">
                   <button type="button" class="btn btn-secondary btn-lg">
                     Learn more
                   </button></a>
@@ -149,7 +131,26 @@
               </p>
             </div>
           </div>
+
+          <div class="card">
+            <img src="./images/Goodwill-bakery.png" class="card-img-top" alt="Goodwill Bakery App Case Study" />
+            <div class="card-body">
+              <h4 class="card-title"> Goodwill Bakery App Case Study </h4>
+              <p class="card-text">
+                This UX case study showcases the processes involved in designing the Goodwill Bakery food delivery mobile application.
+                The Goodwill Bakery App is a mobile application designed to allow customers to order baked goods online with the option of having their orders customized and delivered as well. This mobile application is easy to use, offers a smooth online shopping experience for users and showcases a variety of different baked goods.
+              </p>
+              <p class="card-text">
+                <a href="https://www.behance.net/gallery/134795383/Goodwill-Bakery-Mobile-App" target="_blank"
+                  ><button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a
+                >
+              </p>
+            </div>
+          </div>
         </div>
+
         <div id="#projectbuttons" class="container">
           <a href="https://www.behance.net/blessingokpala" target="_blank">
             <button type="button" class="btn btn-dark btn-lg" style="background-color: #0057FF;">
@@ -161,7 +162,14 @@
               </button></a>
         </div>
       </div>
-      
+      <hr>
+      <p>
+<div class="container">
+  <h3 style="margin-top: 100px;">Resume</h3>
+  <iframe src="https://drive.google.com/file/d/1rbhmojMdYVCItwYJRyVRFQmOzIuUq7Zl/preview" width="640" height="480" allow="autoplay"></iframe>
+</div>
+</p>
+<hr>
       <div class="container">
         <a href="#projects"><h2>FRONT-END DEVELOPMENT PROJECTS</h2></a>
         <div class="card-deck">
