--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <p>
 <div class="container">
   <h3 style="margin-top: 100px;">Resume</h3>
-  <iframe src="https://drive.google.com/file/d/1rbhmojMdYVCItwYJRyVRFQmOzIuUq7Zl/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1rbhmojMdYVCItwYJRyVRFQmOzIuUq7Zl/preview" width="100%" height="500" allow="autoplay"></iframe>
 </div>
 </p>
 <hr>
