updating index html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div id="#projectbuttons" class="container">
           <a href="https://www.behance.net/blessingokpala" target="_blank">
             <button type="button" class="btn btn-dark btn-lg" style="background-color: #0057FF;">
-              View More Projects
+            More UX Projects
             </button></a>
             <a href="https://dribbble.com/blessingc" target="_blank">
               <button type="button" class="btn btn-dark btn-lg" style="background-color: #EA4C89;">
@@ -163,13 +163,6 @@
         </div>
       </div>
       <hr>
-      <p>
-<div class="container">
-  <h3 style="margin-top: 100px;">Resume</h3>
-  <iframe src="https://drive.google.com/file/d/1rbhmojMdYVCItwYJRyVRFQmOzIuUq7Zl/preview" width="100%" height="500" allow="autoplay"></iframe>
-</div>
-</p>
-<hr>
       <div class="container">
         <a href="#projects"><h2>FRONT-END DEVELOPMENT PROJECTS</h2></a>
         <div class="card-deck">
